# market-sim

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  flake.nix  prometheus.yml
scripts/: check.sh  deploy.sh  dev.sh  prod.sh
scripts/docker/: build.sh  run.sh
src/: logger.rs  main.rs  storage_interface.rs
src/cli/: mod.rs
src/core/: broker.rs  investor.rs  market_maker.rs  mod.rs  money.rs  order.rs  price.rs  stock.rs
src/core/company/: base.rs  company_symbol.rs  ipo.rs  listed_company.rs  mod.rs
src/core/stock_exchange/: methods.rs  mod.rs  order_matching.rs
src/core/time/: mod.rs  test.rs
src/server/: json_metrics.rs  mod.rs  prometheus_metrics.rs  storage_wrappers.rs
src/simulation/: fake_data.rs  init.rs  metrics.rs  mod.rs  run.rs  settings.rs
src/simulation/run/: verify_holidays.rs  verify_investors.rs
src/storage/: config_file.rs  mod.rs  prometheus.rs  redis.rs
