[package]
name = "market-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = "4.5.20"
fake = "2.10.0"
log = { version = "0.4.22", features = ["kv", "std"] }
prettytable-rs = "0.10.0"
rand = "0.8.5"
redis = "0.27.5"
reqwest = { version = "0.12.4", features = ["json"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
thousands = "0.2.0"
tokio = { version = "1.41.0", features = ["full"] }

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
strip = true
panic = "abort"
